# novel_splitter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/novel_splitter/: __init__.py  config.py  core.py  llm_interface.py  utils.py
