[project]
name = "novel-splitter"
version = "0.1.0"
description = "A robust tool to split novel text files into chapters using LLMs with a human-in-the-loop confirmation step."
readme = "README.md"
authors = [
    { name = "oding", email = "admin@avarus.org" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]

[project.scripts]
novel-splitter = "novel_splitter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
